<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context="com.mcgovern.jaime.bellaallergy.MainActivity">

    <Button
        android:layout_width="115dp"
        android:layout_height="153dp"
        android:text="@string/eggs"
        android:id="@+id/buttEggs"
        android:layout_row="0"
        android:layout_column="0" />

    <Button
        android:layout_width="137dp"
        android:layout_height="154dp"
        android:text="@string/dairy"
        android:id="@+id/buttDairy"
        android:layout_row="0"
        android:layout_column="1" />

    <Button
        android:layout_width="122dp"
        android:layout_height="156dp"
        android:text="@string/peanuts"
        android:id="@+id/buttPeanuts"
        android:layout_row="0"
        android:layout_column="2" />

    <Button
        android:layout_width="114dp"
        android:layout_height="149dp"
        android:text="@string/tree_nuts"
        android:id="@+id/buttTreeNuts"
        android:layout_row="1"
        android:layout_column="0" />

    <Button
        android:layout_width="137dp"
        android:layout_height="149dp"
        android:text="@string/crustaceans"
        android:id="@+id/buttCrustaceans"
        android:layout_row="1"
        android:layout_column="1" />

    <Button
        android:layout_width="120dp"
        android:layout_height="152dp"
        android:text="@string/molluscs"
        android:id="@+id/buttMolluscs"
        android:layout_row="1"
        android:layout_column="2" />

    <Button
        android:layout_width="115dp"
        android:layout_height="100dp"
        android:text="@string/soy"
        android:id="@+id/buttSoy"
        android:layout_row="2"
        android:layout_column="0" />

    <Button
        android:layout_width="134dp"
        android:layout_height="100dp"
        android:text="@string/fish"
        android:id="@+id/buttFish"
        android:layout_row="2"
        android:layout_column="1" />

    <Button
        android:layout_width="120dp"
        android:layout_height="100dp"
        android:text="@string/celery"
        android:id="@+id/buttCelery"
        android:layout_row="2"
        android:layout_column="2" />

    <Button
        android:layout_width="115dp"
        android:layout_height="100dp"
        android:text="@string/mustard"
        android:id="@+id/buttMustard"
        android:layout_row="3"
        android:layout_column="0" />

    <Button
        android:layout_width="135dp"
        android:layout_height="100dp"
        android:text="@string/sesame"
        android:id="@+id/buttSesame"
        android:layout_row="3"
        android:layout_column="1" />

    <Button
        android:layout_width="122dp"
        android:layout_height="100dp"
        android:text="@string/lupin"
        android:id="@+id/buttLupin"
        android:layout_row="3"
        android:layout_column="2" />
</GridLayout>
